--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,7 +18,7 @@
 
 html {
     box-sizing: border-box;
-    font-family: helvetica;
+    font-family: 'Roboto', Helvetica, Arial, sans-serif;
 }
 
 *, *:before, *:after {
